sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:23: error: not found: value cot
			cot=cpt-1
                        ^